Development
    Menu button being shown in realplayer mode, hide it.
    Minor cleanups
    Create tooltips and restruction some code
    Create function seconds to string (timestamp)
    Mute during drag seek
    Select volume button icon size correctly
    Comment out tight button settings due to icon clipping
    Tighten up the buttons a little more
    Change progress bar seeking method to only work in 1% increments
    Make progress bar function like a slider bar
    Fix open DVD from folder, it was incorrectly using dvdnav:// instead of dvd://
    Hard code disable_deinterlace to be TRUE by default
    Apply dbus patches from Sebastian Reichel
    Fix single_instance command line flag
0.7.0
    Add function to take a screenshot of the playing video
    Hook scroll wheel to FF and REW controls
    Updated tr and ko translations
    Add --single_instance command line option to only allow one instance to run
    Added menu option and hot key 'A' to switch angles Issue 35
    Fix Issue 43, audio file after fullscreen video and drag and drop of a folder to the playlist
    Add tooltips to Preferences screen
    Make sure that DVD w/o folder options open media from /dev/dvd
    Add two new DVD opening options, so that DVD files can be opened from a local disk
    Make dependency on alsa optional, just uses default of 100% when not present
    Add new requirement of alsa-lib-devel, and then use PCM or Master volume setting for default volume
    Don't set volume on media start, but set it if adjusted before open or during caching
    Fix window x and y size issues, from window location patch
    Workaround for progress bar bug in mplayer
    Add setting remember window location to be specified in Edit->Preferences [Advanced]
    Allow mplayer location to be specified in Edit->Preferences [Advanced]
    Revert change for lirc workaround, since to use lirc, irexec + dbus-send is recommended
    Add new dbus methods: VolumeUp and VolumeDown